--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -15,6 +15,14 @@
           >Create Post</a
         >
       </div>
+      <div class="">
+        <a
+          routerLink="home/search"
+          class="nav_anchor btn"
+          (click)="close.click()"
+          >Search</a
+        >
+      </div>
       <div>
         <a
           *ngIf="loggedIn"
