--- a/front/src/app/home/view-post/view-post.component.html
+++ b/front/src/app/home/view-post/view-post.component.html
@@ -24,7 +24,7 @@
           </div>
           <!-- Post date-->
           <div class="text-muted fst-italic mb-2">
-            {{ post.date }}
+            {{ post.date | date }}
           </div>
           <!-- Post Tags-->
           <div>
